--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+   <link rel="stylesheet" href="../src/index.css">
     <title>Final-Front III</title>
   </head>
   <body>
